# spotifoss

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: build.yml
.homebrew/: generate_formula.sh
.pkg/: copyright  spotifoss.desktop
.pkg/APPIMAGE/: pkg2appimage-ingredients.yml
.pkg/DEBIAN/: control
librespot-playback-patch/src/audio_backend/: rodio.rs
scripts/: rebundle-macos-dev.sh
spotifoss-core/: Cargo.toml
spotifoss-core/src/: actor.rs  cache.rs  cdn.rs  lastfm.rs  oauth.rs  system_info.rs
spotifoss-core/src/audio/: decrypt.rs  equalizer.rs  mod.rs  normalize.rs  source.rs
spotifoss-core/src/audio/output/: cubeb.rs
spotifoss-core/src/connection/: diffie_hellman.rs  mod.rs
spotifoss-core/src/player/: file.rs  item.rs  librespot.rs  mod.rs  queue.rs  storage.rs  worker.rs
spotifoss-core/src/session/: access_token.rs  audio_key.rs  client_token.rs  login5.rs  mercury.rs  mod.rs
spotifoss-gui/: Cargo.toml  build-icons.sh  build.rs
spotifoss-gui/assets/: logo.icns
spotifoss-gui/src/: cmd.rs  delegate.rs  main.rs  tray.rs
spotifoss-gui/src/controller/: after_delay.rs  alert_cleanup.rs  ex_click.rs  ex_cursor.rs  ex_scroll.rs  input.rs  nav.rs  on_command.rs  on_debounce.rs  on_update.rs  playback.rs  session.rs  sort.rs
spotifoss-gui/src/data/: album.rs  artist.rs  config.rs  ctx.rs  mod.rs  nav.rs  playback.rs  playlist.rs  promise.rs  recommend.rs  search.rs  show.rs  track.rs  user.rs  utils.rs
spotifoss-gui/src/ui/: album.rs  artist.rs  credits.rs  desktop.rs  episode.rs  find.rs  home.rs  library.rs  lyrics.rs  menu.rs  mod.rs  palette.rs  playable.rs  playback.rs  playlist.rs  preferences.rs  recommend.rs  search.rs  show.rs  theme.rs  track.rs  user.rs  utils.rs
spotifoss-gui/src/webapi/: cache.rs  client.rs  local.rs  mod.rs  rspotify_client.rs
spotifoss-gui/src/widget/: checkbox.rs  dispatcher.rs  icons.rs  link.rs  mod.rs  overlay.rs  promise.rs  remote_image.rs  theme.rs  utils.rs
spotix-core/src/audio/output/: cpal.rs
spotix-gui/src/ui/: menu.rs  mod.rs  playlist.rs
spotix-gui/src/webapi/: client.rs
