[package]
name = "spotifoss-core"
version = "0.1.0"
authors = ["skyline69"]
edition = "2024"


[build-dependencies]
gix-config = "0.53.0"
time = { version = "0.3.47", features = ["local-offset"] }

[dependencies]

# Common
byteorder = { version = "1.5.0" }
crossbeam-channel = { version = "0.5.15" }
git-version = { version = "0.3.9" }
log = { version = "0.4.29" }
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = { version = "0.2.19" }
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"] }
parking_lot = { version = "0.12.5" }
librespot-protocol = "0.8.0"
librespot-core = "0.8.0"
librespot-playback = { version = "0.8.0", default-features = false, features = ["native-tls", "rodio-backend"] }
protobuf = "3"
sysinfo = "0.38.4"
data-encoding = "2.10"
rand = { version = "0.10.0" }
rangemap = { version = "1.7.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
socks = { version = "0.3.4" }
tempfile = { version = "3.27.0" }
rustfm-scrobble = "1.1.1"
ureq = { version = "3.2.0", features = ["json"] }
url = { version = "2.5.8" }
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread"] }

# Cryptography
aes = { version = "0.8.4" }
ctr = { version = "0.9.2" }
hmac = { version = "0.12.1" }
sha-1 = { version = "0.10.1" }
shannon = { version = "0.2.0" }

# Audio
audio_thread_priority = "0.34.0"
cpal = { version = "0.16.0", optional = true }
cubeb = { git = "https://github.com/mozilla/cubeb-rs", optional = true }
libsamplerate = { version = "0.1.0" }
rb = { version = "0.4.1" }
symphonia = { version = "0.5.5", default-features = false, features = [
  "ogg",
  "vorbis",
  "mp3",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Com"], default-features = false }
