[package]
name = "spotifoss-gui"
version = "0.1.0"
authors = ["skyline69"]
edition = "2024"
build = "build.rs"
description = "Fast and native Spotify client (fork of Spotix)"

[[bin]]
name = "spotifoss"
path = "src/main.rs"

[features]
default = ["cpal"]
cpal = ["spotifoss-core/cpal"]
cubeb = ["spotifoss-core/cubeb"]

[dependencies]
spotifoss-core = { path = "../spotifoss-core" }

# Common
crossbeam-channel = { version = "0.5.15" }
directories = "6.0.0"
env_logger = { version = "0.11.9" }
itertools = "0.14.0"
log = { version = "0.4.29" }
lru = "0.16.3"
parking_lot = { version = "0.12.5" }
platform-dirs = { version = "0.3.0" }
rand = { version = "0.10.0" }
regex = { version = "1.12.3" }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149" }
toml = "1.0.6"
threadpool = { version = "1.8.1" }
time = { version = "0.3.47", features = ["macros", "formatting"] }
time-humanize = { version = "0.1.3" }
ureq = { version = "3.2.0", features = ["json", "socks-proxy"] }
url = { version = "2.5.8" }
infer = "0.19.0"
tokio = { version = "1.50.0", features = ["rt", "time"] }
rspotify = { version = "0.16.1", features = ["cli"] }
maybe-async = "0.2.10"
async-trait = "0.1.89"
chrono = "0.4.44"
rspotify-http = "0.16.1"
librespot-core = "0.8.0"

# GUI
druid = { version = "0.8.3", features = ["im", "image", "jpeg", "png", "webp", "serde"] }
druid-shell = { version = "0.8.3", features = ["raw-win-handle"] }
open = { version = "5.3.3" }
raw-window-handle = "0.6.2" # Must stay compatible with Druid
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"] }
sanitize_html = "0.10.0"
rustfm-scrobble = "1.1.1"
notify-rust = "4.16.1"

# StatusNotifierItem (system tray) — Linux/BSD only.
[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
ksni = { version = "0.3", features = ["blocking"] }

[target.'cfg(windows)'.build-dependencies]
winres = { version = "0.1.12" }
image = { version = "0.25.10" }

[package.metadata.bundle]
name = "Spotifoss"
identifier = "com.spotifoss.app"
icon = ["assets/logo.icns"]
version = "0.1.0"
resources = ["assets/fonts/spotify-mix"]
copyright = "Copyright (c) skyline69 2024. All rights reserved."
category = "Music"
short_description = "Fast and native Spotify client"
long_description = """
Small and efficient graphical music player for the Spotify network.
"""
